src/app/game/game.component.scss
@import './src/variables';

.game-container {
  height: 900px;
  background-image: radial-gradient(#89c189 30%, #408940 70%);
  padding: $spacing-large;
}

.pile-deck-container {
  display: flex;
  flex-direction: column;
  gap: $spacing-large;
  align-items: center;
  justify-content: center;
}

.pile-container {
  width: 170px;
  display: flex;
  gap: $spacing-small;
  flex-direction: row;
  align-items: center;
  justify-content: center;
}

.opponent1-container {
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
}

.opponent-side-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 60px;
  margin-top: -220px;
}

.opponents-center-container {
  height: 330px;
  display: flex;
  align-items: center;
  gap: $spacing-large;
  width: 650px;
  justify-content: center;
}

.player-container {
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
}

.deck-container {
  display: flex;
  width: 80px;
  height: 110px;
  justify-content: center;
  align-items: center;
}

.deck-card {
  margin: -35px;
}

.pile-card {
  margin: -15px;
}

.rotated-90 {
  transform: rotate(90deg);
}

.rotated-180 {
  transform: rotate(180deg);
}

.rotated-270 {
  transform: rotate(270deg);
}

